--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+
 ### PhpStorm Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
@@ -88,5 +89,10 @@ fabric.properties
 
 # Sonarlint plugin
 .idea/sonarlint
+
+
+### Npm ###
+node_modules/
+
 
 # End of https://www.gitignore.io/api/macos,phpstorm
