--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description":"" ,
   "devDependencies": {
     "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "create-react-class": "15.6.0",
+    "gulp": "3.9.1",
+    "browserify": "14.4.0",
+    "babelify": "6.4.0",
+    "babel-preset-react": "6.24.1"
 
-  }
+  },
+  "repository": "https://github.com/RyoBamboo/QuantificationTheoryClass2",
+  "license": "MIT"
 
 }
