--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "gulp": "3.9.1",
     "browserify": "14.4.0",
     "babelify": "6.4.0",
-    "babel-preset-react": "6.24.1"
+    "babel-preset-react": "6.24.1",
+    "gulp-webserver": "0.9.1"
 
   },
   "repository": "https://github.com/RyoBamboo/QuantificationTheoryClass2",
